# KnowledgeMap_v2

./: CMakeLists.txt  main.cpp
src/: KRI.cpp  KRI.h  KRL.cpp  KRL.h
src/KRI/: FuncMap.cpp  FuncMap.h  Indiv.cpp  Indiv.h  PredMap.cpp  PredMap.h  VarAssign.cpp  VarAssign.h
src/KRL/: Formula.cpp  Formula.h  PrimitiveSymbol.cpp  PrimitiveSymbol.h  Term.cpp  Term.h
